--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="up">UP!</div>
             <div class="down">DOWN!</div>
         </aside>
-        <div class="win">성공! <span>3</span>번만에 맞혔습니다!</div>
+        <div class="win">성공! <span id="chance">3</span>번만에 맞혔습니다!</div>
     </div>
 </body>
 </html>
