할 일 추가 버튼 이벤트 핸들러 완료

--- a/todoList/index.html
+++ b/todoList/index.html
@@ -34,6 +34,7 @@
         <ul class="todo-list">
 
           <li data-id="1" class="todo-list-item">
+            
             <label class="checkbox">
               <input type="checkbox">
               <span class="text">할 일 1</span>
@@ -46,11 +47,12 @@
             <div class="remove">
               <span class="lnr lnr-cross-circle"></span>
             </div>
+
           </li>
 
           <li data-id="2" class="todo-list-item">
             <label class="checkbox">
-              <input type="checkbox">
+              <input type="checkbox">$
               <span class="text">할 일 2</span>
             </label>
             <div class="modify"><span class="lnr lnr-undo"></span></div>
