--- a/todoList/index.html
+++ b/todoList/index.html
@@ -52,7 +52,7 @@
 
           <li data-id="2" class="todo-list-item">
             <label class="checkbox">
-              <input type="checkbox">$
+              <input type="checkbox">
               <span class="text">할 일 2</span>
             </label>
             <div class="modify"><span class="lnr lnr-undo"></span></div>
