할 일 체크 버튼 이벤트 핸들러 완료

--- a/todoList/index.html
+++ b/todoList/index.html
@@ -33,7 +33,7 @@
         </form>
         <ul class="todo-list">
 
-          <li data-id="1" class="todo-list-item">
+          <!-- <li data-id="1" class="todo-list-item">
             
             <label class="checkbox">
               <input type="checkbox">
@@ -65,7 +65,7 @@
             </label>
             <div class="modify"><span class="lnr lnr-undo"></span></div>
             <div class="remove"><span class="lnr lnr-cross-circle"></span></div>
-          </li>
+          </li> -->
 
         </ul>
       </div>
